--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "devDependencies": {
-    "@sambego/storybook-state": "^1.2.0",
-    "@storybook/react": "^3.4.10",
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@storybook/react": "^3.4.11",
+    "babel-core": "7.0.0-bridge.0",
+    "cross-env": "^5.2.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
