--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "makotot",
   "license": "MIT",
   "scripts": {
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "lint": "eslint src"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -14,7 +15,12 @@
     "@babel/preset-react": "^7.0.0",
     "@storybook/react": "^3.4.11",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-react": "^7.11.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
