--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "lint": "eslint src",
     "build": "npm run build:commonjs && npm run build:es",
     "build:commonjs": "cross-env NODE_ENV=commonjs rollup -c",
-    "build:es": "cross-env NODE_ENV=es rollup -c"
+    "build:es": "cross-env NODE_ENV=es rollup -c",
+    "prepublish": "npm run build"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.1.2",
     "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
@@ -26,7 +27,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.6.0",
+    "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
@@ -34,12 +35,26 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "rimraf": "^2.6.2",
-    "rollup": "^0.66.2",
+    "rollup": "^0.66.4",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-uglify": "^6.0.0",
     "rollup-watch": "^4.3.1"
-  }
+  },
+  "peerDependencies": {
+    "react": ">=16",
+    "react-dom": ">=16"
+  },
+  "engines": {
+    "node": "10",
+    "yarn": "1.10"
+  },
+  "keywords": [
+    "react",
+    "component",
+    "render props",
+    "layer"
+  ]
 }
