--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@ node_modules
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -56,4 +57,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-dist
+lib
