--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,3 +40,9 @@ workflows:
   test-deploy:
     jobs:
       - test
+      - deploy:
+          requires:
+            - test
+          filters:
+            tags:
+              only: /^v.*/
